<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rocky="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:orientation="vertical" >

    <com.wo2b.sdk.view.pulltorefresh.PullToRefreshScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/common_margin_bottom"
            android:paddingTop="@dimen/common_margin_bottom" >

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:indicator_state="none"
                rocky:label="@string/username"
                rocky:position="first" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:label="@string/nickname"
                rocky:position="middle" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_grade_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:label="@string/grade_current"
                rocky:position="last" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_user_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:label="@string/user_exp"
                rocky:position="top" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_user_gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:label="@string/user_gold"
                rocky:position="last" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:label="@string/email"
                rocky:position="top" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:label="@string/tel"
                rocky:position="middle" />

            <com.wo2b.wrapper.view.XPreference
                android:id="@+id/xp_register_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rocky:indicator_state="none"
                rocky:label="@string/register_app"
                rocky:position="last" />

            <Button
                android:id="@+id/btn_exit_login"
                style="@style/common_button_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_xp_margin"
                android:layout_marginRight="@dimen/common_xp_margin"
                android:layout_marginTop="20dp"
                android:text="@string/logout_safe" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="200dp"
                android:contentDescription="@string/null_image"
                android:gravity="center"
                android:src="@drawable/we_have_a_dream"
                android:visibility="gone" />
        </LinearLayout>
    </com.wo2b.sdk.view.pulltorefresh.PullToRefreshScrollView>

</LinearLayout>