<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rocky="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:orientation="vertical" >

    <com.wo2b.sdk.view.pulltorefresh.PullToRefreshScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/common_margin_bottom"
            android:paddingTop="@dimen/common_margin_bottom" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/selector_preference_first"
                android:clickable="false"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:maxEms="3"
                    android:minEms="3"
                    android:text="@string/username"
                    android:textColor="@drawable/textcolor_black_white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_input_username"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_preference_last"
                android:clickable="false"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:maxEms="3"
                    android:minEms="3"
                    android:text="@string/new_password"
                    android:textColor="@drawable/textcolor_black_white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_input_password"
                    android:inputType="text"
                    android:textColor="@color/font_normal"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:weightSum="1" >

                <Button
                    android:id="@+id/user_reset_pwd"
                    style="@style/common_button_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_reset_pwd" />
            </LinearLayout>
        </LinearLayout>
    </com.wo2b.sdk.view.pulltorefresh.PullToRefreshScrollView>

</LinearLayout>